@@ -4,6 +4,8 @@ $Id$
 2004-11-19 Karl Lehenbauer <karl-pg@sc.com>
     * Updated autoconf build to TEA 3.1 / autoconf 2.59
 
+    * Added import_sampledata_prepared_onetransaction.tcl to the tests
+
 2004-11-17 Karl Lehenbauer <karl-pg@sc.com>
     * minor optimization in connections-as-commands and results-as-commands
       where we don't copy and then swap, we copy it the way we want it to
